--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mysql2": "3.3.1",
     "passport": "0.4.1",
     "passport-jwt": "4.0.0",
+    "qrcode": "^1.5.3",
     "socket.io": "4.5.3",
     "stripe": "12.6.0"
   }
