--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "2.8.5",
     "express": "4.17.3",
     "jsonwebtoken": "8.5.1",
+    "lodash": "^4.17.21",
     "morgan": "1.10.0",
     "multer": "1.4.4",
     "mysql": "2.18.1",
