--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "@google-cloud/storage": "5.20.5",
+    "axios": "^1.4.0",
     "bcryptjs": "2.4.3",
     "cors": "2.8.5",
     "express": "4.17.3",
@@ -21,6 +22,7 @@
     "mysql2": "3.3.1",
     "passport": "0.4.1",
     "passport-jwt": "4.0.0",
+    "pdfkit": "^0.13.0",
     "qrcode": "^1.5.3",
     "socket.io": "4.5.3",
     "stripe": "12.6.0"
