--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "multer": "1.4.4",
     "mysql": "2.18.1",
     "mysql2": "3.3.1",
+    "nodemailer": "6.9.4",
     "passport": "0.4.1",
     "passport-jwt": "4.0.0",
-    "pdfkit": "^0.13.0",
-    "qrcode": "^1.5.3",
+    "pdfkit": "0.13.0",
+    "qrcode": "1.5.3",
     "socket.io": "4.5.3",
     "stripe": "12.6.0"
   }
