--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google-cloud/storage": "5.20.5",
     "axios": "^1.4.0",
     "bcryptjs": "2.4.3",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "2.8.5",
     "express": "4.17.3",
     "jsonwebtoken": "8.5.1",
